Update logo source

--- a/3rd_exercise_FTIR_N2O_irradiation_analysis.html
+++ b/3rd_exercise_FTIR_N2O_irradiation_analysis.html
@@ -58,7 +58,7 @@
   <hr>
 
   <p style="text-align:center">
-    <img class="logo" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSHYOnIACPcb9bCeQQ_wbfF9mp5ADlbCIoghtDM6YiLklaBrtEsAxZ-G-y6N3_PNR_tCmw&usqp=CAU"
+    <img class="logo" src="https://github.com/thallescotta/logo-ppgio-vetorizado/blob/main/SVG-PPGIO.png"
          alt="Logo CEFET">
   </p>
 
