--- a/3rd_exercise_FTIR_N2O_irradiation_analysis.html
+++ b/3rd_exercise_FTIR_N2O_irradiation_analysis.html
@@ -58,7 +58,7 @@
   <hr>
 
   <p style="text-align:center">
-    <img class="logo" src="https://github.com/thallescotta/logo-ppgio-vetorizado/blob/main/SVG-PPGIO.png"
+    <img class="logo" src="https://raw.githubusercontent.com/thallescotta/logo-ppgio-vetorizado/main/SVG-PPGIO.png"
          alt="Logo CEFET">
   </p>
 
