Revise online version text and logo image
Updated the online version description and logo source.

--- a/3rd_exercise_FTIR_N2O_irradiation_analysis.html
+++ b/3rd_exercise_FTIR_N2O_irradiation_analysis.html
@@ -166,8 +166,8 @@
 
     <h3>5) Entrega</h3>
     <p>
-      Publicar este relatório como <strong>página</strong> no GitHub Pages ou anexar PDF exportado desta página.
-      Versão online:
+      Versão online (GitHub Pages) é esta página.
+      
       <br>
       <a href="https://thallescotta.github.io/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/3rd_exercise_FTIR_N2O_irradiation_analysis.html" target="_blank" rel="noopener">
         https://thallescotta.github.io/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/3rd_exercise_FTIR_N2O_irradiation_analysis.html
@@ -182,7 +182,7 @@
   <hr>
 
   <p style="text-align:center">
-    <img class="logo" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSHYOnIACPcb9bCeQQ_wbfF9mp5ADlbCIoghtDM6YiLklaBrtEsAxZ-G-y6N3_PNR_tCmw&usqp=CAU"
+    <img class="logo" src="https://raw.githubusercontent.com/thallescotta/logo-ppgio-vetorizado/main/SVG-PPGIO.png"
          alt="CEFET Logo">
   </p>
 
