--- a/3rd_exercise_FTIR_N2O_irradiation_analysis.html
+++ b/3rd_exercise_FTIR_N2O_irradiation_analysis.html
@@ -121,7 +121,23 @@
 </div>
 <div class="print-area">
   <strong>Print 1</strong><br>
-  <img src="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/raw/main/gif/Anima%C3%A7%C3%A3o-a1.gif" alt="Espectro não irradiado — seleção de banda e preparo para espessura" style="max-width:100%; height:auto;">
+  <!-- GIF 1 — letra a -->
+  <img
+    src="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/raw/main/gif/Anima%C3%A7%C3%A3o-a1.gif"
+    style="max-width:100%; height:auto;"
+    title="(Letra a) Reabri a sessão no OMNIC e preparei a área de trabalho para o espectro pré-irradiação."
+    alt="(Letra a) Reabertura no OMNIC e preparação da área de trabalho para o espectro pré-irradiação."
+  >
+  <!-- GIF 2 — letra a -->
+  <img
+    src="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/raw/main/gif/Anima%C3%A7%C3%A3o-a2.gif"
+    style="max-width:100%; height:auto; margin-top:8px;"
+    title="(Letra a) Enquadrei a região 2300–2170 cm⁻¹ e modelei a banda 2239 cm⁻¹ no Peak Resolve (baseline linear; geração do Composite Result)."
+    alt="(Letra a) Enquadramento 2300–2170 cm⁻¹ e ajuste da banda 2239 cm⁻¹ no Peak Resolve."
+  >
+  <div class="caption muted" style="margin-top:6px;">
+    Ambos os GIFs correspondem à letra a: abertura/preparo do espectro não irradiado e ajuste da banda 2239&nbsp;cm⁻¹ para estimar a espessura.
+  </div>
 </div>
 
 <div class="enunciado">
@@ -129,17 +145,18 @@
 </div>
 <div class="print-area">
   <strong>Print 2</strong><br>
-  <img src="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/raw/main/gif/Anima%C3%A7%C3%A3o-a2.gif" alt="Pré-processamento — limitar região útil e corrigir baseline" style="max-width:100%; height:auto;">
+  <em>(Inserir captura: baseline corrigido)</em>
 </div>
 
 <div class="enunciado">
   <strong>c.</strong> Escolher os 3 picos contidos no artigo do Fulvio-2009[5] (Tabela 4). Determinar a área dos mesmos e calcular a densidade de coluna usando o A-value da tabela e a eq. 2.
-  <br><span class="muted">Obs.: A terceira banda de maior intensidade do N₂O (em 589 cm<sup>−1</sup> ν<sub>2</sub>) não foi analisada em Fulvio[5].</span>
+  <br><span class="muted">Obs.: A terceira banda de maior intensidade do N₂O (em 589 cm<sup>−1</sup>, ν<sub>2</sub>) não foi analisada em Fulvio[5].</span>
 </div>
 <div class="print-area">
   <strong>Print 3</strong><br>
-  <em>(Inserir captura: integração das 3 bandas e cálculo da densidade de coluna)</em>
+  <em>(Inserir captura: integração das 3 bandas)</em>
 </div>
+
 
 
     <h3>2) Espessura do gelo e verificação no SRIM/TRIM</h3>
