Update print label in FTIR analysis HTML file

--- a/3rd_exercise_FTIR_N2O_irradiation_analysis.html
+++ b/3rd_exercise_FTIR_N2O_irradiation_analysis.html
@@ -123,7 +123,7 @@
 </div>
 
 <div class="print-area">
-  <strong>Print 1 — Letra a (abertura e preparo)</strong><br>
+  <strong>GIFs 1 e 2 — Letra a (abertura e preparo)</strong><br>
   <img
     src="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/raw/main/gif/Anima%C3%A7%C3%A3o-a1.gif"
     style="max-width:100%; height:auto;"
